"mediaquery-mobile" text alignment bugfix

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -35,7 +35,6 @@
         margin: 5px;
     }
     
-
 }
 
 /* SMALL MOBILE LANDSCAPE VIEW */
@@ -166,13 +165,8 @@
     .album {
         min-width: 140px;
         width: calc(100% / 2);
-        padding: 0;
+        padding: 3px 3px 3px 0;
         margin: 10px 0;
-    }
-
-    .cover {
-        width: 130px;
-        height: 130px;
     }
 
     /* FOOTER */
